# rescueclaw

./: .gitignore  BUILD-PLAN.md  Cargo.toml  LICENSE  README.md  install.sh  rescue-bot.example.json  rescueclaw.example.json
.github/workflows/: ci.yml  release.yml
skill/: SKILL.md  install.js  rescueclaw-checkpoint.js
src/: lib.rs  main.rs
src/analysis/: mod.rs
src/backup/: mod.rs
src/config/: mod.rs
src/health/: mod.rs
src/restore/: mod.rs
src/telegram/: mod.rs
src/validate/: mod.rs
tests/: backup_restore.rs
