[package]
name = "rescueclaw"
version = "0.1.0"
edition = "2021"
description = "Your AI agent's always-on safety net"
license = "MIT"
repository = "https://github.com/harman314/rescueclaw"
readme = "README.md"
keywords = ["openclaw", "zeroclaw", "backup", "watchdog", "ai-agent"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teloxide = { version = "0.13", features = ["macros"] }
reqwest = { version = "0.12", features = ["json"] }
flate2 = "1"
tar = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tempfile = "3"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for smaller binary
strip = true        # Strip symbols
panic = "abort"     # No unwinding
